--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,11 @@
 <h1>All Movies</h1>
 
+<% if user_signed_in? %>
+  <p>Hello <%= current_user %>, you are signed in.</p>
+<% else %>
+  <p>Please sign in.</p>
+<% end %>
+
 <ul>
   <% @movies.each do |movie| %>
     <li><%= movie.title %></li>
