Adds log in/out link on all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
 
 <% if user_signed_in? %>
   <p>Hello <%= current_user %>, you are signed in.</p>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
 <% else %>
   <p>You are not signed in.</p>
+  <%= link_to('Login', new_user_session_path)  %>
 <% end %>
 
 <%= yield %>
