Updates registration page, requires username
 - when signing up, requires you enter a username
 - when you are signed in, displays your username and
   says that you are signed in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
 <h3><%= notice %></h3>
 
 <% if user_signed_in? %>
-  <p>Hello <%= current_user %>, you are signed in.</p>
+  <p>Hello <%= current_user.username %>, you are signed in.</p>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-<% else %>
-  <p>You are not signed in.</p>
+<% elsif current_user.nil? %>
+  <%= link_to('Register', new_user_registration_path)  %>
   <%= link_to('Login', new_user_session_path)  %>
 <% end %>
 
