--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,10 +11,11 @@
  * file per style scope.
  *
  *= require_self
+ *
  */
 
 @import "bourbon";
 @import 'base/base';
-/*@import "refills";*/
 @import "neat";
+@import "refills/navigation";
 @import "styles";
