--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,8 @@
  */
 
 @import "bourbon";
+/*@import "home";
+@import "users";*/
 @import 'base/base';
 @import "neat";
 @import "refills/navigation";
