Adds about bechdel test page

--- a/app/views/bechdel/index.html.erb
+++ b/app/views/bechdel/index.html.erb
@@ -1,1 +1,21 @@
-<h2>What is the Bechdel Test?</h2>
+<p>
+  <%= image_tag "bechdel_test.jpg" %>
+</p><br>
+
+<h3>About the Bechdel Test</h3>
+<p>
+  The Bechdel Test, sometimes called the Mo Movie Measure or Bechdel Rule is a simple test which names the following three criteria: (1) it has to have at least two women in it, who (2) who talk to each other, about (3) something besides a man. The test was popularized by Alison Bechdel's comic Dykes to Watch Out For, in a 1985 strip called The Rule. For a nice video introduction to the subject please check out <a href="http://www.feministfrequency.com/2009/12/the-bechdel-test-for-women-in-movies/">The Bechdel Test for Women in Movies</a> on feministfrequency.com.
+</p><br>
+
+<h3>From Wikipedia:</h3>
+
+<p>
+The Bechdel test asks if a work of fiction features at least two women who talk to each other about something other than a man. The requirement that the two women must be named is sometimes added. Many contemporary works fail this test of gender bias. On average, films that pass the test have been found to have a lower budget than others, but have comparable or better financial performance.
+</p><br>
+
+<p>
+The test is named after the American cartoonist Alison Bechdel. In 1985, she had a character in her comic strip Dykes to Watch Out For voice the idea, which she attributed to a friend, Liz Wallace. The test was originally conceived for evaluating films but has since been applied to other media. It is also known as the Bechdel/Wallace test, the Bechdel rule, Bechdel's law, or the Mo Movie Measure.
+</p><br>
+
+<h3>The Bechdel Test for Women in Movies on Feminist Frequency</h3>
+<iframe width="560" height="315" src="//www.youtube.com/embed/bLF6sAAMb4s" frameborder="0" allowfullscreen></iframe>
