User able to submit a new movie, only when logged in
 - tests not passing, but working in browser
 - movie controller pulls in current user to assign a
   user_id to the movie

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @movies.each do |movie| %>
-    <li><%= movie.title %></li>
+    <li><%= link_to movie.title, movie_path(movie) %></li>
   <% end %>
 </ul>
