--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,8 +1,12 @@
 <h1>Info about <%= @movie.title %></h1>
+<br>
 
 <ul>
   <li>Year: <%= @movie.year %></li>
   <li>Language: <%= @movie.language %></li>
   <li>Country produced: <%= @movie.country_produced %></li>
-  <li>Summary: <%= @movie.summary %></li>
 </ul>
+
+<br>
+<h4>Summary</h4>
+<p><%= @movie.summary %></p>
