Working Version with voting on a movie
 - can vote up/down
 - stores into votes table, with current user
   and current movie
 - does everything in the update action
   (not using create action)

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,3 +10,6 @@
 <br>
 <h4>Summary</h4>
 <p><%= @movie.summary %></p>
+
+<%= button_to "Vote Up", movie_vote_path([@movie, @vote], params.merge(vote: 1)), action: :update, method: :patch, role: "button" %>
+<%= button_to "Vote Down", movie_vote_path([@movie, @vote], params.merge(vote: -1)), action: :update, method: :patch, role: "button" %>
