--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -11,5 +11,11 @@
 <h4>Summary</h4>
 <p><%= @movie.summary %></p>
 
-<%= button_to "Vote Up", movie_vote_path([@movie, @vote], params.merge(vote: 1)), action: :update, method: :patch, role: "button" %>
-<%= button_to "Vote Down", movie_vote_path([@movie, @vote], params.merge(vote: -1)), action: :update, method: :patch, role: "button" %>
+<br>
+<% if user_signed_in? %>
+  <h4>Does this movie pass the Bechdel Test?</h4>
+  <%= button_to "Pass", movie_vote_path([@movie, @vote], params.merge(vote: 1)), action: :update, method: :patch %>
+  <%= button_to "Not Pass", movie_vote_path([@movie, @vote], params.merge(vote: -1)), action: :update, method: :patch %>
+<% else %>
+  <h5><i>Please sign in to vote.</i></h5>
+<% end %>
