--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,8 +14,8 @@
 <br>
 <% if user_signed_in? && !@user_voted %>
   <h4>Does this movie pass the Bechdel Test?</h4>
-  <%= button_to "Pass", movie_vote_path([@movie, @vote], params.merge(vote: 1)), action: :update, method: :patch %>
-  <%= button_to "Not Pass", movie_vote_path([@movie, @vote], params.merge(vote: -1)), action: :update, method: :patch %>
+  <%= button_to "Pass", movie_votes_path(@movie, params.merge(vote: {vote: 1})), action: :create, method: :post %>
+  <%= button_to "Not Pass", movie_votes_path(@movie, params.merge(vote: {vote: -1})), action: :create, method: :post %>
 <% elsif @user_voted %>
   <h5><i>Thanks for already voting on this movie!</i></h5>
 <% elsif !user_signed_in? %>
