Search bar now functional, searches only movie titles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <%= render partial: "refills/navigation" %>
 <br>
-<h4><%= notice %></h4>
+<h4 style="color:purple; font-style: italic;"><%= notice %></h4>
 <br>
 
 <%= yield %>
