Pulls in rotten tomatoes API using JSON.parse
 - uses method in the movie Model
 - will create a method in Movie model to parse the JSON,
   and pull out only select information that we need

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,3 +5,7 @@
     <li><%= link_to movie.title, movie_path(movie) %></li>
   <% end %>
 </ul>
+
+<h1>Top 10 Box Office Movies</h1>
+
+<%= @box_office %>
