--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,6 +6,33 @@
   <% end %>
 </ul>
 
-<h1>Top 10 Box Office Movies</h1>
+<h1>Top <%= @num_movies %> Box Office Movies</h1>
 
-<%= @box_office %>
+<div class="cards">
+<% @box_office_movies.each do |movie| %>
+
+  <div class="card">
+    <div class="card-image">
+
+    </div>
+    <div class="card-header">
+      <%= movie[:title] %>
+    </div>
+    <div class="card-copy">
+      <p>
+        <span style="float:left; padding-right:15px;">
+          <%= image_tag "#{movie[:thumbnail_url]}", alt: "Movie poster image" %>
+        </span>
+        <%= movie[:summary] %>
+      </p>
+    </div>
+    <div class="card-stats">
+      <ul>
+        <li><%= movie[:year] %></li>
+        <li><%= movie[:language] %></li>
+        <li><%= movie[:country_produced] %></li>
+      </ul>
+    </div>
+  </div>
+<% end %>
+</div>
