--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,28 +2,28 @@
 <br>
 
 <div class="cards">
-<% @box_office_movies.each do |movie| %>
+<% @movies.each do |movie| %>
 
   <div class="card" style="height: 240px;">
     <div class="card-image">
 
     </div>
     <div class="card-header">
-      <%= movie[:title] %><br>
-      <%= movie[:year] %>
+      <%= link_to movie.title, movie_path(movie) %><br>
+      <%= movie.year %>
     </div>
     <div class="card-copy">
       <p>
         <span style="float:left; padding-right:15px;">
-          <%= image_tag "#{movie[:thumbnail_url]}", alt: "Movie poster image" %>
+          <%= image_tag "#{movie.thumbnail_url}", alt: "Movie poster image" %>
         </span>
-        <%= truncate movie[:summary], length: 140, separator: ' ' %>
+        <%= truncate movie.summary, length: 140, separator: ' ' %>
       </p>
     </div>
     <div class="card-stats" style="position: absolute; bottom:0;">
       <ul>
-        <li><%= movie[:language] %></li>
-        <li><%= movie[:country_produced] %></li>
+        <li><%= movie.language %></li>
+        <li><%= movie.country_produced %></li>
       </ul>
     </div>
   </div>
