--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -5,4 +5,15 @@ body {
 .movie-poster-image {
   width: 200px;
   float:right;
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+
+div.container {
+  @include outer-container;
+}
+
+div.element {
+  @include span-columns(6);
+  margin-top:20px;
 }
