Writes user comments on movie test, not passing

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -54,9 +54,9 @@
 
 <% end %>
 
-<% if !@comments.nil? %>
+<% if !@movie.comments.nil? %>
   <hr>
-  <% @comments.each do |comment| %>
+  <% @movie.comments.each do |comment| %>
     <p></p>
     <div class="comment">
       <div class="comment-image">
