Attempts to add @font-face using bourbon's mixin

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,11 +15,11 @@
  */
 
 @import "bourbon";
-/*@import "home";
-@import "users";*/
 @import 'base/base';
 @import "neat";
 @import "refills/navigation";
 @import "refills/cards";
 @import "refills/comments";
+
+@import "font";
 @import "styles";
