--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<h2 id="header-title">The Bechdel Test</h2>
+
 <%= render partial: "refills/navigation" %>
 <br>
 <h4 style="color:purple; font-style: italic;"><%= notice %></h4>
