--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,3 +1,5 @@
+@include font-face(rieslingregular, '/fonts/riesling-font/riesling-webfont', normal, $asset-pipeline: true);
+
 body {
   margin: 2% 15%;
 }
@@ -16,4 +18,8 @@ div.container {
 div.element {
   @include span-columns(6);
   margin-top:20px;
+}
+
+#header-title {
+  font-family: 'rieslingregular';
 }
