--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1 id="header-title">The Bechdel Test</h1>
+<h1 class="header-title">The Bechdel Test</h1>
 
 <%= render partial: "refills/navigation" %>
 <br>
