Adds refills footer, test passes when creating successful comment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,6 @@
 @import "refills/navigation";
 @import "refills/cards";
 @import "refills/comments";
-
+@import "refills/footer";
 @import "font";
 @import "styles";
