Fixes error messages when adding new movie, styles error messages

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -32,3 +32,12 @@ div.element {
 }
 h1, h2, h3, h4, h5 { font-family: 'uppereastsideregular'; }
 h1 {font-size: 3.5vw;}
+
+.errors-div {
+  padding: 10px;
+  margin: 20px 0px;
+  background-color:#F7F2F0;
+  color: red;
+  font-weight:800;
+  border-radius: 10px;
+}
