Adds strip to remove space when scraping

--- a/app/views/bechdel/index.html.erb
+++ b/app/views/bechdel/index.html.erb
@@ -1,3 +1,11 @@
+<h1>testing</h1>
+<ul>
+  <li>Movies w/ ratings: <%= @movies_passed %></li>
+  <li>Passed 1 test: <%= @passed_1 %></li>
+</ul>
+<hr>
+
+
 <p>
   <%= image_tag "bechdel_test.jpg" %>
 </p><br>
