Updates xpath for movie thumbnail, was unable to save movie bc invalid url

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,7 +15,7 @@
     <div class="card-copy">
       <p>
         <span style="float:left; padding-right:15px;">
-          <%= image_tag "#{movie.thumbnail_url}", alt: "Movie poster image" %>
+          <%= image_tag "#{movie.thumbnail_url}", alt: "Movie poster image", width: 54 %>
         </span>
         <%= truncate movie.summary, length: 140, separator: ' ' %>
       </p>
