--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -6,6 +6,9 @@
 body {
   margin: 2% 15%;
 }
+.headers-refills-font {
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+}
 
 .movie-poster-image {
   width: 200px;
