--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -12,12 +12,8 @@
         <li class="nav-link">
           <%= link_to "Bechdel Test", bechdel_index_path, onclick: "javascript:void(0)" %>
         </li>
-        <li class="nav-link more">
-          <%= link_to "Movies", movies_path, onclick: "javascript:void(0)" %>
-            <ul class="submenu">
-              <li><a href="javascript:void(0)">Genre 1</a></li>
-              <li><a href="javascript:void(0)">Genre 2</a></li>
-            </ul>
+        <li class="nav-link">
+          <%= link_to "Bechdel Test Stats", analytics_path, onclick: "javascript:void(0)" %>
         </li>
 
       </ul>
