Updates to bechdel movie analytics page

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -17,6 +17,12 @@ body {
   padding-bottom: 20px;
 }
 
+.search-bar {
+  background-color: none;
+  color: black;
+  position: relative;
+}
+
 div.container {
   @include outer-container;
 }
