--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -23,8 +23,7 @@
   <p>
     Read more about this movie on the
     <a href="<%= @cannes_info.cannes_url %>" target="_blank">
-      Cannes Film Festival
-    </a>, website.
+      Cannes Film Festival</a>, website.
   </p>
 <% end %>
 
