--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -22,8 +22,10 @@
       <div class="search-bar">
         <div class="search-and-submit">
           <%= form_tag(movies_path, method: "get", type: "search") do %>
-            <%= text_field_tag :search, params[:search], placeholder: "Search Movies" %>
-            <%= image_submit_tag "smiley-face.png", alt: "Search Happy", class: "search-button" %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Happy" %>
+            <button type="submit">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
+          </button>
           <% end %>
         </div>
       </div>
