--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -50,3 +50,18 @@ h1 {font-size: 3.5vw;}
   font-weight:800;
   border-radius: 10px;
 }
+
+//nav bar -------------------------------------------------------
+.nav-header {
+  @include outer-container;
+
+  logo {
+  @include span-columns(8);
+  }
+
+  searchbar {
+  @include span-columns(4);
+  height: 100px;
+  }
+}
+
