--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -10,5 +10,8 @@
 <h1>How many tests did it pass?</h1>
 <%= pie_chart ({"Passes 1 test" => @passed_1, "Passes 2 tests" => @passed_2, "Passes 3 tests" => @passed_3}) %>
 
+<h1>Which tests did it pass?</h1>
+<%= pie_chart Bechdel.group(:tests_explanation).count %>
+
 <h1>Countries</h1>
 <%= geo_chart Movie.group(:country_produced).count %>
