Creates category rake task, to add categories only to movies after Cannes scraping

--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -14,6 +14,7 @@
           <ul class="submenu">
             <li><%= link_to "Top Box Office", movies_path(sort_by: :box_office) %></li>
             <li><%= link_to "Top Rentals", movies_path(sort_by: :rentals) %></li>
+            <li><%= link_to "Cannes Film Festival", movies_path(sort_by: :Cannes) %></li>
           </ul>
         </li>
       </ul>
