Updates bechdel validations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 
 <footer class="footer-2">
   <center>
-    <p>Created by Jacinda Zhong | Launch Academy Week 8 Systems Check | July 2014</p>
+    <p>Created by Jacinda Zhong | Launch Academy Breakable Toy Project | July 2014</p>
   </center>
 </footer>
 
