Deploying updates to heroku, fixes validations with categories

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 
 <%= yield %>
 
-<footer class="footer-2">
+<footer class="footer-2 footer-styles">
   <center>
     <p>Created by Jacinda Zhong | Launch Academy Breakable Toy Project | July 2014</p>
   </center>
