--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -3,7 +3,7 @@
     <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
     <div class="nav">
       <ul id="navigation-menu" style="margin-left: 20px;">
-        <li class="nav-link">
+        <li class="nav-link" style="color:white; font-weight: 800;">
           <%= link_to "Bechdel Test", bechdel_index_path, onclick: "javascript:void(0)" %>
         </li>
         <li class="nav-link">
