--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -51,6 +51,11 @@ h1 {font-size: 3.5vw;}
   border-radius: 10px;
 }
 
+.footer-styles {
+  background-color: #333333;
+  color: rgba(255, 255, 255, 0.7);
+}
+
 //nav bar -------------------------------------------------------
 .nav-header {
   @include outer-container;
