Failed attempts to add ajax, commiting before switching branches

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,8 @@
 @import "refills/footer";
 @import "font";
 @import "styles";
+
+#load_more_movies {
+    display: none;
+    margin-bottom: 10px; /* Some margin to separate it from the footer */
+}
