--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
 <h1 class="header-title">The Bechdel Test</h1>
 
+<h2><%= link_to 'Infite Scrolling', root_url %> | <%= link_to 'With Button', movies_with_button_url %></h2>
+
 <%= render partial: "refills/navigation" %>
 <br>
 
