--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,5 @@
+<h1 style="margin-top:0px; margin-bottom: 5px;"><%= @title %></h1>
+
 <div class="cards">
 <% @movies.each do |movie| %>
 
@@ -25,3 +27,6 @@
   </div>
 <% end %>
 </div>
+
+<%= will_paginate @movies %>
+<br>
