Adjusts nav bar, submenu now aligned

--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -11,7 +11,7 @@
         </li>
         <li class="nav-link more">
           <%= link_to "Movies", movies_path, onclick: "javascript:void(0)" %>
-          <ul class="submenu">
+          <ul class="submenu submenu-adjustments">
             <li><%= link_to "Top Box Office", movies_path(sort_by: :box_office) %></li>
             <li><%= link_to "Top Rentals", movies_path(sort_by: :rentals) %></li>
             <li><%= link_to "Cannes Film Festival", movies_path(sort_by: :Cannes) %></li>
