--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -56,6 +56,9 @@ h1 {font-size: 3.5vw;}
   color: rgba(255, 255, 255, 0.7);
 }
 
+.analytics-header { font-size: 3vw; }
+.analytics-subheader { font-size: 2vw; }
+
 //nav bar -------------------------------------------------------
 .nav-header {
   @include outer-container;
