--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -1,17 +1,12 @@
 <h1>Some Stats from BechdelTest.com</h1>
-<ul>
-  <li>Movies w/ ratings: <%= @movies_passed %></li>
-  <li>Passed 1 test: <%= @passed_1 %></li>
-  <li>Passed 2 tests: <%= @passed_2 %></li>
-  <li>Passed all tests: <%= @passed_3 %></li>
-</ul>
-<hr>
 
+<br><br>
+
+<p class="analytics-subheader">Number of movies with ratings: <%= @movies_passed %></p>
+
+<hr>
 <h1>How many tests did it pass?</h1>
 <%= pie_chart ({"Passes 1 test" => @passed_1, "Passes 2 tests" => @passed_2, "Passes 3 tests" => @passed_3}) %>
-
+<hr>
 <h1>Which tests did it pass?</h1>
 <%= pie_chart Bechdel.group(:tests_explanation).count %>
-
-<h1>Countries</h1>
-<%= geo_chart Movie.group(:country_produced).count %>
