Fixes bug in movie show page and controller

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
 <h2 class="sub-header">
-  <%= image_tag "#{@movie_poster}", alt: "Movie poster image", class: "movie-poster-image" %>
+  <%= image_tag "#{@movie.thumbnail_url}", alt: "Movie poster image", class: "movie-poster-image" %>
   ABOUT <%= @movie.title.upcase %>
 </h1>
 <br>
