Links header to root url, updates bechdel scraper

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -35,6 +35,7 @@ div.element {
 .header-title {
   font-family: 'seasideresortnfregular';
   font-size: 4vw;
+  color: black;
 }
 .sub-header {
   font-family: 'uppereastsideregular';
